refactor: call notebook at background and enhance the UI
